--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.104.1
+fastapi==0.110.0
 uvicorn==0.24.0
 python-multipart==0.0.6
-pydantic==2.5.0
+pydantic==2.7.1
+pydantic-core==2.18.2
+starlette==0.37.2
 jinja2==3.1.2
