--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-fastapi==0.110.0
-uvicorn==0.24.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-pydantic==2.7.4
-pydantic-core==2.41.5
-starlette==0.37.2
-jinja2==3.1.2
+pydantic==2.5.0
