--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
 python-dotenv==1.0.0
+sqlalchemy==2.0.23
+pymysql==1.1.0
+cryptography==41.0.7
